@@ -1,7 +1,7 @@
 AUX manifest 489 RMD160 2fcb48771db34df7c90d95125b1ea592cce6f8e8 SHA1 86fa3530c6c89cfbbbbe1e8bd5a979c59353f4f6 SHA256 93388d2e6f6bdc08c6c44d2a53e8df7704da4e5fc69ef08365ccbd5c06fa8797
 DIST lucene-2.3.2-src.tar.gz 4602041 RMD160 89537777752d458b8b9c94b0add86b2dedeefcda SHA1 0088a7c521c1bcc4b218d52da72eabc43d2279c9 SHA256 d0cc4b8a40900bbb3243d2e9d9987e0ea0e7d359a2992222bc9acf296b208416
 DIST lucene-2.4.0-src.tar.gz 5053702 RMD160 c6c33faec176af806bf5e70ccef76458b1fd5f6c SHA1 7e7e59db8a006521459cde70376784bc95dac2f2 SHA256 01509848b8cf2e6675a38fc06124c7622cdd573e975ebcc893c36903b416b7c7
-EBUILD lucene-analyzers-2.3.2-r1.ebuild 412 RMD160 4e11b1bb669e4f020ba77f8dd1bf38f63dba2cda SHA1 cb6b0d02a59e63525705309bf40ed153d5cd21a7 SHA256 7362b0dbe2a8e4115d2d9aee3964e6809a9d87ef90609ab00bd6c11c445c0d4b
-EBUILD lucene-analyzers-2.4.0.ebuild 225 RMD160 08bf9ca115e35b256beb38b93a89f3b60cb1a0bf SHA1 fb914cd3e44d021cb4bc870437b209839ffdd564 SHA256 d7d7e49e32fcfe9f4916d6db63151003a58e6f8f8febb4952f1976babb421bb3
-MISC ChangeLog 1062 RMD160 3fa94fd1514336f4f71a92bb301defd2d97e5460 SHA1 246b895a2005ae816cc3a266080bfe3fb70e883e SHA256 84aeb4aa92f5ea0dc81cb9b16cb9a2390d6cc10e2cc84d15fae7419f71adc68a
-MISC metadata.xml 241 RMD160 9d44d74661eac7ec657f1cda526ab2f59d1915f9 SHA1 774467646d68a987c8811bec3c2249d5ae7bd29d SHA256 8538bec800c36fb559ab5746cee74d986fc5c7d1dbb72eb293401575b1a812c1
+EBUILD lucene-analyzers-2.3.2-r1.ebuild 405 RMD160 b277e8077c2034a3127fe90cdcce4dc169eead42 SHA1 df0bf394b3aa7a55d50bd35cd07b6554210c98b3 SHA256 32432abe3597fc3bbc7dbb4841a53881d17580242f844e73594c187fedc59cb0
+EBUILD lucene-analyzers-2.4.0-r1.ebuild 405 RMD160 2c245c6f58fc468cdac865456badfde81ecae27a SHA1 8f2c8e9d47ba3b3d69154b14beaf7fbd79177b0f SHA256 eaa9b083fc412a905092810a594def5939344c56fed8b43299d7c1f4fe022e8e
+MISC ChangeLog 1298 RMD160 801508a819f6101c1255995e8d1ad98d6e0ff669 SHA1 d244f69feff012225e1e7e0ff74d125226963bd9 SHA256 77b8fd2a8fa3ab6c46c62dc65069fc0f740801fec762281fc17e7d29d660e390
+MISC metadata.xml 385 RMD160 8a44dcb9ce9410a7367b169bcf122fb0d59c0997 SHA1 11a5451f0c419630c17bee8e29bdc15c9b97d370 SHA256 8acaa95fb33b6d6157bec5e88df1db092425984cdbe4b4ce0e79fd116545aec4
