@@ -1,10 +1,0 @@
-# Copyright 1999-2009 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-SLOT=2.4
-inherit lucene-contrib
-
-DESCRIPTION="Analyzer addon for lucene"
-KEYWORDS="~amd64 ~x86"
-IUSE=""
