@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Feb 2009; Jacob Floyd (techgurufloyd) <techgurufloyd@gmail.com>
+  +lucene-analyzers-2.4.0-r1.ebuild, -lucene-analyzers-2.4.0.ebuild,
+  lucene-analyzers-2.3.2-r1.ebuild:
+  Adding osgi to 2.4.0 and formatting change to 2.3.2 ebuild
+
   26 Feb 2009; Serkan Kaba <serkan@gentoo.org>
   -lucene-analyzers-1.9.1-r2.ebuild:
   lucene-contrib eclass will not support versions prior to 2.0.
